--- a/estilo.css
+++ b/estilo.css
@@ -87,3 +87,29 @@ th {
     text-align: center;
 
 }
+
+.col{
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+
+}
+
+.col-1{
+    width: 60%;
+}
+
+.col-2{
+    width: 40%;
+    padding-left: 100px;
+}
+
+.col-1-1{
+    width: 40%;
+}
+
+.col-2-2{
+    width: 60%;
+    padding-left: 80px;
+}
+
