--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #18b39e;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -113,3 +113,58 @@ th {
     padding-left: 80px;
 }
 
+
+#vpablo {
+    width: 100vh;
+    height: 60vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.containervideo {
+    max-width: 800px;
+    margin: 20px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+#vreparacion {
+    width: 60vh;
+    height: 90vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.cols {
+    max-width: 90%;
+    display: flex;
+    margin: 20px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.col1 {
+    max-width: 70%;
+    margin: 20px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.col2 {
+    max-width: 30%;
+    margin: 20px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
